fix(templates): resolve ui issues of AdminPanel template on small screens #3888 (#3889)

--- a/src/Templates/AdminPanel/Bit.AdminPanel/src/Client/Shared/Shared/Header.razor.scss
+++ b/src/Templates/AdminPanel/Bit.AdminPanel/src/Client/Shared/Shared/Header.razor.scss
@@ -68,6 +68,28 @@
     }
 }
 
+::deep .header-breadcrumb {
+    &.bit-brc {
+
+        @include sm {
+            display: none;
+        }
+
+        .item {
+            font-weight: 400;
+            font-size: rem(16px);
+        }
+
+        .bit-icon {
+            font-size: rem(14px);
+        }
+
+        .selected-item {
+            font-weight: 600;
+        }
+    }
+}
+
 .img-wrapper {
     display: flex;
     justify-content: center;
